WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180490
[Win] [64-bit] Resolve Microsoft warning C4319 on BitVector.cpp
https://bugs.webkit.org/show_bug.cgi?id=180490
Summary
[Win] [64-bit] Resolve Microsoft warning C4319 on BitVector.cpp
Basuke Suzuki
Reported
2017-12-06 11:05:16 PST
warning C4319 is for ~ operator onto unsigned type when implicitly extending its size.
Attachments
fix
(1.51 KB, patch)
2017-12-06 14:28 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2017-12-06 14:28:08 PST
Created
attachment 328630
[details]
fix
WebKit Commit Bot
Comment 2
2017-12-07 19:03:23 PST
Comment on
attachment 328630
[details]
fix Clearing flags on attachment: 328630 Committed
r225668
: <
https://trac.webkit.org/changeset/225668
>
WebKit Commit Bot
Comment 3
2017-12-07 19:03:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-07 19:06:25 PST
<
rdar://problem/35926299
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug