[Win] [64-bit] Resolve Microsoft warning C4319 on BitVector.cpp https://bugs.webkit.org/show_bug.cgi?id=180490

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2017-12-07
Reviewed by Alex Christensen.

bitsInPointer() returns unsigned which is smaller than size_t.
"~"(negate) operator is applied before extending its size which result filled with zero.
This may be potentially a bug if numBits is greater than max value of unsigned long
(which is not practical).

* wtf/BitVector.cpp:
(WTF::BitVector::OutOfLineBits::create):

Canonical link: https://commits.webkit.org/196488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225668 268f45cc-cd09-0410-ab3c-d52691b4dbfc